# reading_books

./: .gitattributes  .gitignore  README.md
Create_GUI_Applications_with_PySide6/pyside6-source/designer/: resources_rc.py
Create_GUI_Applications_with_PySide6/pyside6-source/model-views/: mainwindow_ui.py
Finance_Big_Data/download/IF1701T1V1.1/: readme_修正版ver1.1.txt
Finance_Big_Data/download/IF1701T2/: readme.txt
books/Finance_with_Python/: 07_visualization_pyqtgraph.ipynb  08_financial_time_series.ipynb
books/Fundamentals_of_Data_Visualization/_book_production_j/: 00_preface.md  02_aesthetic_mapping.md
books/Introduction_to_statistics/: README.md  chap1.ipynb  chap1.ju.py  chap2.ju.py
books/Introduction_to_statistics/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
books/Python_and_Hdf5/: chap1.py  test.hdf5  weather.hdf5
books/Pythonによるファイナンス第2版/: memo.md
books/Pythonによる米国株テクニカル分析と検証/: av_test.py
books/chouKioku/: choKioku.md
books/comp_programming/: エンジニアのためのフィードバック制御入門.ipynb  ゼロから作るDeep Learning.ipynb  独学プログラマー.ipynb  退屈なことはPythonにやらせよう（第1部 Pythonプログラミングの基礎）.ipynb
books/doing_math_with_python/: Pythonからはじめる数学入門.ipynb  Pythonからはじめる数学入門.ju.py
books/fintech/Finance_Big_Data/download/IF1611/21_streamer_car5_artix7/rpi_carhost/: CMakeLists.txt  capture.cpp  opencv_func.cpp  websocket_flags.h
books/fintech/Finance_Big_Data/download/IF1611/21_streamer_car5_artix7/rpi_carhost/www/: stream_websockets_button.html
books/統計学入門/: README.md  chap1.ipynb  chap1.ju.py
データ解析のための統計モデリング入門/fig2.5_hist_para/: plotUi3_ui.py
(+1236 files in other folders)
